refacto  pom.xml an jenkinfile